--- a/dorgas.css
+++ b/dorgas.css
@@ -5,7 +5,7 @@
 .menu{
     width: 100%;
     height: 60px;
-    background: pink;
+    background: rgb(81, 217, 252);
 }
 .conteudo{
     width: 100%;
@@ -13,7 +13,7 @@
 .rodape{
     width: 100%;
     text-align: center;
-    background-color: rgb(219, 219, 136);
+    background-color: rgb(188, 154, 243);
 }
 .img-mobile{
     width: 100%;
@@ -21,7 +21,7 @@
 @media screen and (min-width: 768px) {
     .menu{
         height: 100px;
-        background-color: blueviolet;
+        background-color: rgb(42, 145, 214);
     }
     .conteudo-home{
         display: flex;
@@ -31,6 +31,6 @@
 @media screen and (min-width: 1280px){
     .menu{
         height: 150px;
-        background-color: black;
+        background-color: rgb(77, 135, 241);
    }
 }
